Changes for 1.0.3.5

* fix bug 2806095, missing files in mac build (sgb)

* Add some AA50 test cases

* Fix bug 2459410 Fighters on carriers with allied fighters can't attack (ComradeKev)

* Fix bug 2807115 Air improperly calculating max distance with existing carriers (ComradeKev)

* Fix exceptions when undoing a paratroop attack move (ComradeKev)

* Fix aircraft being able to fly too far when building carriers (ComradeKev)

* Fix bug 2806723 ships allowed to move through enemy navies during combat move (ComradeKev)

* Fixed stopping in zone with ignored units causes movement to end (ComradeKev)

* Added AA50 Technology Tree to game notes (ComradeKev)

* Check defending units for attack power before popping kamikaze message (ComradeKev)

* Add method to land paratroops (remove dependence on bombers) (ComradeKev)

* Fix 1 AA hit kills all paratroops (ComradeKev)

* Fix paratroops refusing to fight (ComradeKev)

Changes for 1.0.3.4

* Better internet ip detection (sgb)

* Fix bug where a territory could not be strategic bombed and conquered in the same turn (sgb)

* Fix bug 2804677 Retreating into enemy spaces (sgb)

* Add menu to change look and feel (sgb)

* Fix bug 2799810  Admin right-click menu (sgb)

* Fig bug 2801742 Rockets throw error in NWO (sgb)

* Fix bug 2801740 java error in every roll in a PBEM game. (sgb)

* Fixed not being able to place bid units at non-factories (ComradeKev)

* Fix bug 2675636 Crash when ignoring enemy units (ComradeKev)

* Fix bug 2779955 Cause battle when new/ignored units are in contested zones (ComradeKev)

* Minor change to the Strong AI calculation of the strength of sea units near a territory (Kevin Moore)

* Fixed the connections or E/W Romania in NWO9 (ComradeKev)

* Added name_place.txt for NWO (ComradeKev)

* Updated rockets.png for Russians in NWO (ComradeKev)

* Fixed some connections in Europe.xml (ComradeKev)

* Added name_place.txt for Europe (ComradeKev)
